--- a/app/src/main/res/layout/learning_leader_view_item.xml
+++ b/app/src/main/res/layout/learning_leader_view_item.xml
@@ -23,33 +23,33 @@
             app:srcCompat="@mipmap/top_learner_badge" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="36dp"
-            android:text="Nafiu Lawal"
+            android:text="@string/name_placeholder"
             android:textColor="#2C2B2E"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvLearningHours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="56 learning Hours, "
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:text="@string/learnighoursText"
+            app:layout_constraintStart_toStartOf="@+id/tvName"
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvCountry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:text="Ghana"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
-            app:layout_constraintStart_toEndOf="@+id/textView2" />
+            android:text="@string/country"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLearningHours"
+            app:layout_constraintStart_toEndOf="@+id/tvLearningHours" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
