Added Submit screen

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,5 @@
     <item
         android:id="@+id/action_submit"
         android:title="submit"
-        app:showAsAction="ifRoom">Submit
-    </item>
+        app:showAsAction="always">Submit</item>
 </menu>
