--- a/app/src/main/res/layout/activity_project_submission_action.xml
+++ b/app/src/main/res/layout/activity_project_submission_action.xml
@@ -74,7 +74,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gads_background1" />
+        app:srcCompat="@drawable/gads_logo" />
 
     <TextView
         android:id="@+id/textView"
